Fix down arrow movement on mobile

--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -37,6 +37,7 @@
     display: flex;
     position: relative;
     flex: 0.5;
+    min-width: 285px;
     justify-content: space-between;
     align-items: center;
 
